Fixed button overlapping mobile overlay. Added logic to handle showing a suggestion to the user to try mobile

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -11,7 +11,16 @@
         transition: all 0.1s ease-in;
      
         &:hover {
-            @extend .active-index;
+            @extend .active-background;
+        }
+    }
+
+    .button {
+        transition: all 0.1s ease-in;
+        border: 4px solid transparent;
+
+        &:hover {
+            @extend .active-thick;
         }
     }
 }
@@ -24,15 +33,6 @@
     border: 1px solid white;
 }
 
-.active-index {
+.active-background {
     background: rgba(255, 255, 255, 0.238);
-}
-
-.mat-mdc-button.mat-mdc-button-base {
-    width: 50% !important;
-    height: 100% !important;
-}
-
-.mdc-button {
-    background: rgba(255, 255, 255, 0.238) !important;
 }
